<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string
		name="app_label">ArtAround</string>
	<string
		name="app_version">1.0</string>

	<!-- Generic -->
	<string
		name="ok">OK</string>
	<string
		name="cancel">Cancel</string>
	<string
		name="loading">Loading...</string>
	<string
		name="empty">No items</string>
	<string
		name="unknown">Unknown</string>
	<string
		name="by">By</string>
	<string
		name="all">All</string>
	<string
		name="submit">Submit</string>
	<string
		name="comment">Comment</string>
	<string
		name="edit">Edit</string>
	<string
		name="sending">Sending...</string>
	<string
		name="submit_art_success">The changes have been submitted and is awaiting moderation.</string>
	<string
		name="submit_art_failure">Due to an error, the changes were not submitted.\n Please try again
		later.</string>
	<string
		name="submit_comment_success">Your comment has been submitted and is awaiting moderation.
	</string>
	<string
		name="submit_comment_failure">Due to an error, your comment was not submitted.\n Please try
		again later.</string>
	<string
		name="about">About</string>
	<string
		name="about_title">About ArtAround</string>
	<string
		name="about_msg">
		<![CDATA[
		Explore a city by its art! <br /><br /> ArtAround is an interactive,
		inside-out museum for public art in DC that lets you find, add, and
		comment on everything from murals, monuments, and street art to
		galleries, museums, and festivals. <br /><br /> Share what you find and discover a
		new way to see the space around you. <br />
		Visit <a href="http://theartaround.us/">theartaround.us</a> for more info.
		]]>
	</string>
	<string
		name="feedback">Feedback</string>
	<string
		name="welcome_title">Welcome</string>
	<string
		name="welcome_msg">
		<![CDATA[
		ArtAround is an interactive, inside-out museum for public art in DC. <br /><br />
		Get the scoop on everything from murals, monuments, and street art to galleries, museums, and festivals - and share what you know, too.
		]]>
	</string>


	<!-- Location -->
	<string
		name="current_location">Current location: </string>
	<string
		name="location_suggest_settings_title">Improve my location</string>
	<string
		name="location_suggest_settings_msg">Not all location sources are currently enabled. For
		the fastest
		and most accurate location detection please turn on GPS and wireless
		network.</string>
	<string
		name="location_update_failure">Your current location is temporary unavailable.</string>
	<string
		name="waiting_location">Waiting for location...</string>

	<!-- Wifi and connectivity -->
	<string
		name="connection_failure_title">Connection failure</string>
	<string
		name="connection_failure_msg">ArtAround uses Google Maps, which requires an active network
		connection to function properly.</string>
	<string
		name="connection_failure_ok">WiFi Options</string>
	<string
		name="load_data_failure">Could not retrieve data from server.\n Please check your
		connectivity.</string>
	<string
		name="upload_picture_failure">Could not send the picture to server.\n Please check your
		connectivity.
	</string>

	<!-- Search -->
	<string
		name="search_hint">Enter search here...</string>

	<!-- Preferences -->
	<string
		name="preferences">Preferences</string>
	<string
		name="preferences_general_title">General</string>
	<string
		name="preferences_clear_cache_title">Clear cache</string>
	<string
		name="preferences_clear_cache_summary">Clear cached data.</string>
	<string
		name="clear_cache_progress">Clearing cache...</string>
	<string
		name="clear_cache_success">Cleared cache successfully.</string>
	<string
		name="clear_cache_failure">Clearing the cache failed.</string>
	<string
		name="choose_city">Choose city</string>

	<string
		name="update_cache_progress">Updating cached data...</string>


	<!-- =============================================================== -->
	<!-- Theme Strings -->
	<!-- =============================================================== -->

	<!-- General Errors -->
	<string
		name="load_categories_error">Could not load the category list from server. Please try again
		later.</string>
	<string
		name="load_neighborhoods_error">Could not load the area list from server. Please try
		again later.
	</string>
	<string
		name="load_photos_error">Could not load the photos from Flickr. Please try again later.
	</string>
	<string
		name="load_arts_error">Could not load the arts from server. Please try again later.
	</string>

	<!-- Art Map -->
	<string
		name="add_new_art">Add New Art</string>
	<string
		name="favorites">Favorites</string>
	<string
		name="filtered">Filtered</string>
	<string
		name="empty_favorites">You have no favorites yet.</string>

	<!-- Art Edit -->
	<string
		name="art_edit_actionbar_title">Edit Art Details</string>
	<string
		name="art_edit_label_name">Name</string>
	<string
		name="art_edit_label_artist">Artist</string>
	<string
		name="art_edit_label_year">Year</string>
	<string
		name="art_edit_label_category">Category*</string>
	<string
		name="art_edit_label_ward">Ward</string>
	<string
		name="art_edit_label_area">Area*</string>
	<string
		name="art_edit_label_minimap">Drag the pin to your location: </string>
	<string
		name="art_edit_label_minimap_loading">Updating your current location...</string>
	<string
		name="art_edit_label_minimap_coords">Your coordinates: </string>
	<string
		name="art_edit_hint_description">Enter a description of the piece of art...</string>
	<string
		name="art_edit_hint_location_description">Enter a description of the location...</string>
	<string
		name="art_edit_input_empty_title">Empty Fields</string>
	<string
		name="art_edit_input_empty_msg">Please fill in all the fields marked with (*) before submitting.
	</string>
	<string
		name="art_edit_input_empty_location_title">Unknown Location</string>
	<string
		name="art_edit_input_empty_location_msg">Cannot submit art because the location could not be determined.
	</string>
	<string
		name="art_edit_input_empty_photos_title">Photos Not Available</string>
	<string
		name="art_edit_input_empty_photos_msg">Please upload at least one photo before submitting this new art.
	</string>
	<string
		name="art_edit_btn_submit">Submit</string>
	<string
		name="art_edit_add_photo">Add Photo*</string>
	<string
		name="art_edit_media_source_camera">Take a new photo</string>
	<string
		name="art_edit_media_source_gallery">Select photo from gallery</string>
	<string
		name="art_edit_media_source">Add New Photo</string>
	<string
		name="art_edit_remove_photo">Remove Photo</string>
	<string
		name="art_edit_discard_changes_title">Discard Changes</string>
	<string
		name="art_edit_discard_changes_msg">Pressing back without submitting will cause your changes to be
		lost. Are you sure to discard all changes?</string>

	<!-- Art Detail -->
	<string
		name="art_detail_location">Location</string>
	<string
		name="art_detail_comments">Comments</string>
	<string
		name="art_detail_area_label">Area:</string>
	<string
		name="art_detail_ward_label">Ward:</string>
	<string
		name="art_detail_view_all_comments">View All Comments...</string>
	<string
		name="art_detail_leave_comment">Leave a Comment</string>
	<string
		name="art_detail_label_name">Name</string>
	<string
		name="art_detail_label_email">Email*</string>
	<string
		name="art_detail_label_url">URL</string>
	<string
		name="art_detail_input_hint">Leave a comment about this piece of art.</string>
	<string
		name="art_added_favorite">This art has been added to favorites.</string>
	<string
		name="art_removed_favorite">This art has been removed from favorites.</string>
	<string
		name="art_detail_hint_input_empty_title">Required Fields</string>
	<string
		name="art_detail_hint_input_empty_msg">Please fill in the fields before submitting.</string>

	<!-- Art Detail Options Menu -->
	<string
		name="share">Share</string>
	<string
		name="add_favorite">Add Favorite</string>
	<string
		name="remove_favorite">Remove Favorite</string>
	<string
		name="added_favorite">%s is now favorite.</string>
	<string
		name="removed_favorite">%s is no longer favorite.</string>
	<string
		name="street_view">Street View</string>

	<!-- Share Art -->
	<string
		name="share_art_title">Share art via:</string>
	<string
		name="share_art_header">Find more info about this piece of art!</string>
	<string
		name="share_artist">Artist:</string>
	<string
		name="share_category">Category:</string>
	<string
		name="share_neighborhood">Neighborhood:</string>


	<!-- Art Filters -->
	<string
		name="art_filter_title">Filter</string>
	<string
		name="art_filter_by_category">By Category</string>
	<string
		name="art_filter_by_area">By Neighborhood</string>
	<string
		name="art_filter_by_artist">By Artist</string>
	<string
		name="art_filter_by_title">By Title</string>
	<string
		name="art_filter_group_venues">All Venues</string>
	<string
		name="art_filter_group_public">All Public Art</string>
	<string
		name="category_gallery">Gallery</string>
	<string
		name="category_museum">Museum</string>
	<string
		name="category_market">Market</string>

</resources>
