<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	android:padding="10dp">

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="10dp">

		<AutoCompleteTextView
			style="@style/ArtEditInput.Dropdown"
			android:id="@+id/filter_type"
			android:cursorVisible="false"
			android:text="@string/art_filter_by_category" />

		<ImageButton			
			style="@style/AutocompleteDropdown"
			android:id="@+id/dropdown_filter_type" />
	</LinearLayout>

	<EditText
		style="@style/ArtEditInput"
		android:id="@+id/art_filter_search"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:drawableLeft="@drawable/ic_search_small"
		android:drawablePadding="6dp"
		android:gravity="left|center"
		android:imeOptions="actionSearch"
		android:hint="@string/search_hint"
		android:visibility="gone" />

	<include
		android:id="@+id/loading"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		layout="@layout/show_loading"
		android:visibility="gone" />

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_marginTop="10dp">

		<TextView
			android:id="@+id/art_filters_empty"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:layout_gravity="center"
			android:gravity="center"
			android:textStyle="bold"
			android:textColor="#FFFFFF"
			android:textSize="16sp"
			android:text="@string/empty" />

		<ExpandableListView
			android:id="@+id/art_filters_list"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:scrollbarStyle="outsideOverlay"
			android:scrollingCache="false"
			android:cacheColorHint="@color/ArtFiltersBackground"
			android:dividerHeight="1px" />

	</LinearLayout>

</LinearLayout>
